# gametools

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-project.json
.github/workflows/: test.yml
examples/cards/: main.rs
examples/dice/: main.rs
examples/metered_resource/: main.rs
examples/priority_queue/: main.rs
examples/ranked_order/: main.rs  npc_generator.rs
examples/refilling_pool/: main.rs
examples/scratch/: main.rs
examples/yahtzee/: dicepool_ext.rs  main.rs  yahtzee.rs  yahtzee_agent.rs
src/: cards.rs  dice.rs  dominos.rs  gameerror.rs  lib.rs  main.rs  metered_resource.rs  ordering.rs  refilling_pool.rs  spinners.rs  todo
src/cards/: card.rs  deck.rs  hand.rs  pile.rs  std_playing_cards.rs  uno_cards.rs
src/ordering/: priority_queue.rs  ranked_order.rs
