[package]
name = "gametools"
version = "0.3.2"
authors = ["pygmy-twylyte <davidjvbrown.md@gmail.com>"]
edition = "2021"
description = "Game-related tools: spinners, dice, dominos, and cards."
license = "MIT OR Apache-2.0"
repository = "https://github.com/pygmy-twylyte/gametools"
readme = "README.md"
keywords = ["games", "dice", "dominos", "cards", "spinners"]
categories = ["game-engines", "data-structures"]


[dependencies]
rand = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
default = []

[package.metadata.tarpaulin]
exclude-files = ["src/bin/scratch.rs"]
