[package]
name = "gametools"
version = "0.5.0"
authors = ["pygmy-twylyte <davidjvbrown.md@gmail.com>"]
edition = "2021"
description = "Game component toolkit for dice, dominos, spinners, and fully extensible card decks."
license = "MIT OR Apache-2.0"
repository = "https://github.com/pygmy-twylyte/gametools"
readme = "README.md"
keywords = ["games", "dice", "dominos", "cards", "spinners"]
categories = ["game-engines", "data-structures"]


[dependencies]
rand = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"
serde = { version = "1.0", features = ["derive"], optional = true }

[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
    "serde",
]

[features]
serde = ["dep:serde"]
default = []

[package.metadata.tarpaulin]
exclude-files = ["src/bin/scratch.rs"]
